packages/typ/tests/fixtures/diagnostics/0497_modules_outer_hidden_annotation_mismatch_07.ml.expected
File "0497_modules_outer_hidden_annotation_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0497_modules_outer_hidden_annotation_mismatch_07 is not a valid module name.

File "0497_modules_outer_hidden_annotation_mismatch_07.ml", line 15, characters 14-32:
15 | let _ : int = Outer_eta.Hidden.x
                   ^^^^^^^^^^^^^^^^^^
Error: The value Outer_eta.Hidden.x has type Outer_eta.Hidden.t
       but an expression was expected of type int
